
* harp_product_update_history() now also adds the current utc time and harp
  version before the execution command.

* Allow NULL as argument for harp_variable_set_description() and
  harp_variable_set_unit() to clear the current description/unit.

* Added harp_variable_copy_attributes() function.

* Added optional parameter to regrid() operation to specify the axis boundaries.

* Updates to S5P L2 and MIPAS L2 product ingestions.

1.2 2018-04-09
~~~~~~~~~~~~~~

* Allow data compression for HDF5 output:
  - Added harp_set_option_hdf5_compression() and
    harp_get_option_hdf5_compression() functions to C library.
  - Added --hdf5-compression option to harpconvert and harpmerge.
  - Added hdf5_compression parameter to harp.export_product() Python function.

* Allow regrid() operation to interpolate in the time dimension.

* Improved binning of angle values (average of 1 and 359 [deg] is now 0).

* Added bin() operation variant without parameters.

* The bin() operation using a collocation result file now retains the
  collocation_index variable (with the first value for each bin).

* Changed smooth() operation such that each vertical level where the source
  grid point was NaN the target grid point also remains NaN.

* Added -ap option to harpmerge.

* Added --dataset option to harpdump and changed output format of
  harp_dataset_print() and harp_product_metadata_print() to csv format.

* Added 'operations' parameter to Python harp.export_product() function.

* Importing/exporting a product with operations in Python now automatically
  updates the history attribute.

* Fixed issue where harpmerge did not introduce a time dimension for all
  variables.

* Fixed issue where datetime_start and datetime_stop global attributes were not
  created when exporting in HDF4 or HDF5 format.

* String attributes in HDF5 files can now be empty strings (using H5S_NULL).

* Allow HARP to import HDF5 files that are generated by the netCDF4 library